chore: update keymaps and config files
- Update .gitignore to exclude Python virtual environment directory (qmkenv/)
- Adjust keymaps in keyboards/gmmk/gmmk2/p96/ansi/keymaps/dexxiez and dexxiez-work keymap.c files
- Comment out AW20216S_* pin definitions in keyboards/gmmk/gmmk2/p96/config.h

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ quantum/version.h
 /keyboards/**/kb.h
 /keyboards/**/kb.c
 
+# Python VENV
+qmkenv/
+
 # Eclipse/PyCharm/Other IDE Settings
 *.iml
 .browse.VC.db*
